# TPC-codex-v10g

./: .gitignore  CODEX_V10G_MUSTVISIT_SEMANTIC_REPORT.md  README.md  __init__.py  config.yaml  eval_local.py  main.py  pyproject.toml  requirements.txt  run_tpc.py  tpc_agent.py
ChinaTravel/: requirements.txt
ChinaTravel/TPC@AIC2025/: readme.md
data/splits/: codex_acc_fail2.txt  codex_rand10_s13.txt  codex_rand10_s29.txt  codex_rand10_s47.txt  codex_rand30_s131.txt  codex_rand50_val.txt  codex_v10_hardfail13.txt  codex_v10d_training_hard3.txt  fresh_A10.txt  fresh_ALL30.txt  fresh_C10.txt  training.txt  training_rand10.txt
scripts/: _worker.py  analyze_hard_logic_patterns.py  batch_eval_1000.py  eval_analyzer.py  fast_day_eval.py  gen_30.py  run_official_eval_smoke.py  run_one.py  setup_chinatravel_env.sh  sync_github.sh  sync_results.py  watch_official_results.ps1
semantic_library_lab/: V10G_FAILURE_CORPUS_REPORT.md
semantic_library_lab/scripts/: build_augmented_training_corpus.py  build_semantic_library.py  export_v9_semantic_alignment.py  predict_constraints.py  prepare_ml_dataset.py
skills/travel_planner/: SKILL.md
src/active/: active_constraint_mapping.py  active_query_selector.py  test_active.py
src/adapter/: plan_formatter.py  runner.py
src/candidates/: candidate_generator.py  hotel_ranker.py  (+4 more)
test/: README.md  hard_logic_pattern_report.csv  hard_logic_pattern_report.md  run_batch_50.py  run_phase7_eval.py  test_50.txt  timing.json
tpc_agent/: .gitignore  README.md  __init__.py  config.yaml  main.py  run_tpc.py  tpc_agent.py  tpc_llm.py
(+161 files in other folders)
