[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tpc_agent"
version = "0.1.0"
description = "TPC 旅游行程规划比赛 Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "typing-extensions>=4.9.0",
    "python-dateutil>=2.8.2",
    "numpy>=1.26.0",
    "networkx>=3.2.0",
    "ortools>=9.8.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
]

[project.scripts]
tpc-agent = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
